--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,18 +12,30 @@
             padding: 0;
             background-color: #f8f8f8;
         }
+
         header {
             background-color: #333;
             color: white;
             padding: 15px 0;
             text-align: center;
         }
+
         .content {
             padding: 20px;
         }
-        h2 {
+
+        h1, h2 {
             color: #333;
         }
+
+        h1 {
+            margin: 0;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
         .download-button {
             display: inline-block;
             padding: 10px 20px;
@@ -32,30 +45,60 @@
             text-decoration: none;
             border-radius: 5px;
             text-align: center;
+            transition: background-color 0.3s ease;
         }
+
         .download-button:hover {
+            background-color: #1ED760;
+        }
+
+        .section {
+            margin-bottom: 40px;
+        }
+
+        .back-button {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            background-color: #1DB954;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        .back-button:hover {
             background-color: #1ED760;
         }
     </style>
 </head>
+
 <body>
 
-<header>
-    <h1>Welcome to BeachThing</h1>
-    <p>Custom firmware for Spotify's Car Thing - Integrating Spotify & Voice Assistants</p>
-</header>
+    <header>
+        <h1>Welcome to BeachThing</h1>
+        <p>Custom firmware for Spotify's Car Thing - Integrating Spotify & Voice Assistants</p>
+    </header>
 
-<div class="content">
-    <h2>Showcase</h2>
-    <p>BeachThing brings a new level of control to your Spotify experience while driving. Enjoy seamless integration with Alexa, Siri, or Google Assistant, all while controlling your music, podcasts, and more.</p>
+    <div class="content">
+        <section class="section">
+            <h2>Showcase</h2>
+            <p>BeachThing brings a new level of control to your Spotify experience while driving. Enjoy seamless integration
+                with Alexa, Siri, or Google Assistant, all while controlling your music, podcasts, and more.</p>
+        </section>
 
-    <h2>How to Get Started</h2>
-    <p>To get started with BeachThing, you'll need a Spotify Car Thing device. Follow these instructions to flash the firmware onto your device and enjoy enhanced features.</p>
+        <section class="section">
+            <h2>How to Get Started</h2>
+            <p>To get started with BeachThing, you'll need a Spotify Car Thing device. Follow these instructions to flash the
+                firmware onto your device and enjoy enhanced features. Check the documentation for detailed steps.</p>
+        </section>
 
-    <h2>Download BeachThing Firmware</h2>
-    <p>Click the button below to download the latest firmware:</p>
-    <a href="https://github.com/PepperMarioYT/Beach-Thing/releases/latest/download/beachthing-firmware.zip" class="download-button">Download Firmware</a>
-</div>
+        <section class="section">
+            <h2>Download BeachThing Firmware</h2>
+            <p>Click the button below to download the latest firmware:</p>
+            <a href="download"
+                class="download-button" download>Download Firmware</a>
+        </section>
+    </div>
 
 </body>
+
 </html>
