--- a/download.html
+++ b/download.html
@@ -17,6 +17,18 @@
             padding: 15px 0;
             text-align: center;
         }
+        header a {
+            color: white;
+            text-decoration: none;
+            padding: 10px;
+            background-color: #1DB954;
+            border-radius: 5px;
+            margin-left: 15px;
+            font-size: 16px;
+        }
+        header a:hover {
+            background-color: #1ED760;
+        }
         .content {
             padding: 20px;
         }
@@ -53,6 +65,7 @@
 <body>
 
 <header>
+    <a href="/" class="back-button">Back</a>
     <h1>Download BeachThing Firmware</h1>
     <p>All the tools and firmware you need to get started with BeachThing on your Car Thing.</p>
 </header>
