--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <h2>Download BeachThing Firmware</h2>
             <p>Click the button below to download the latest firmware:</p>
             <a href="download"
-                class="download-button" download>Download Firmware</a>
+                class="download-button">Download Firmware</a>
         </section>
     </div>
 
